--- a/proyecto-lovit/src/main/resources/templates/index.html
+++ b/proyecto-lovit/src/main/resources/templates/index.html
@@ -1,21 +1,107 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{master.html}">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
+
   <meta charset="utf-8">
-  <title>Inicio</title>
+  <title>Lovit Boutique</title>
+
   <link rel="stylesheet" type="text/css" href="static/css/index.css" th:href="@{/css/index.css}">
+
+  <link
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
+
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+  <link
+          href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
+          rel="stylesheet" />
+
 
 </head>
 <body>
 
-<h2>hola</h2>
+<nav class="navbar navbar-expand-lg navbar-custom">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Lovit Boutique</a>
+    <button class="navbar-toggler" type="button"
+            data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="/productos">Productos</a></li>
+        <li class="nav-item"><a class="nav-link" href="/admin">Administración</a></li>
+        <li class="nav-item"><a class="nav-link" href="/contacto">Contacto</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-<div>
 
-  <h1>hola</h1>
 
+<div layout:fragment="content" class="container my-5">
+</div>
+
+<script
+        src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+<script
+        src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+<script
+        src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+<div layout:fragment="scripts" th:remove="tag">
+
+</div>
+
+
+<div layout:fragment="content">
+
+  <div class="bg-custom p-3">
+    <h1 class="display-1 titulo">¡Bienvenido a Lovit Boutique!</h1>
+    <h3 class="subtitulo">Disfruta de tus productos favoritos para cualquier evento</h3>
+  </div>
+
+
+  <br>
+  <h3 class="medio">¡Detalles que encantan!</h3>
+  <div class="row">
+    <div class="col-md-6">
+      <h2 class="inicioSub">Vela ergonómica</h2>
+      <p class="pindex">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</p>
+    </div>
+    <div class="col-md-6">
+      <img src="assets/42.jpeg" alt="Descripción de la imagen" class="img-fluid">
+    </div>
+  </div>
+
+
+  <br>
+  <h3 class="medio">¡Recuerdos!</h3>
+
+<!--  <div class="row">-->
+<!--    <div class="col-md-3 my-5" th:each="producto : ${ultimosProductos}" th:object="${producto}">-->
+<!--      <a th:href="@{/productos/{id}(id=*{id})}" class="card shadow-lg" style=""text-decoration:none;>-->
+<!--        <img th:src="@{/assets/{filename}(filename={rutaPortada})}" th:alt="{titulo}" class="card-img-top">-->
+<!--        <div class="card-body">-->
+<!--          <h2 class="card-title fs-6" th:text="*{titulo}"></h2>-->
+<!--          <p th:text="*{descripcion}"></p>-->
+<!--        </div>-->
+<!--      </a>-->
+<!--    </div>-->
+<!--  </div>-->
 </div>
 
 </body>
