--- a/proyecto-lovit/src/main/resources/templates/index.html
+++ b/proyecto-lovit/src/main/resources/templates/index.html
@@ -2,10 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-
   <meta charset="utf-8">
-  <title>Lovit Boutique</title>
-
+  <title>Inicio</title>
   <link rel="stylesheet" type="text/css" href="static/css/index.css" th:href="@{/css/index.css}">
 
   <link
@@ -24,7 +22,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-custom">
+<nav class="navbar navbar-expand-lg bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Lovit Boutique</a>
     <button class="navbar-toggler" type="button"
@@ -38,16 +36,10 @@
         <li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
         <li class="nav-item"><a class="nav-link" href="/productos">Productos</a></li>
         <li class="nav-item"><a class="nav-link" href="/admin">Administración</a></li>
-        <li class="nav-item"><a class="nav-link" href="/contacto">Contacto</a></li>
       </ul>
     </div>
   </div>
 </nav>
-
-
-
-<div layout:fragment="content" class="container my-5">
-</div>
 
 <script
         src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
@@ -62,18 +54,50 @@
 <script
         src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
-<div layout:fragment="scripts" th:remove="tag">
 
+<div class="bg-custom p-3">
+  <h1 class="display-1 titulo">¡Bienvenido a Lovit Boutique!</h1>
+  <h3 class="subtitulo">Disfruta de tus productos favoritos para cualquier evento</h3>
 </div>
 
-
-<div layout:fragment="content">
-
-  <div class="bg-custom p-3">
-    <h1 class="display-1 titulo">¡Bienvenido a Lovit Boutique!</h1>
-    <h3 class="subtitulo">Disfruta de tus productos favoritos para cualquier evento</h3>
+  <div id="carouselExampleCaptions" class="carousel slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets\2.jpeg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Tag para el cumpleañero</h5>
+          <p>Recuerdo de cumpleaños para las señoras.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="assets\3.jpeg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Vela personalizada</h5>
+          <p>Vela ergonómica para bautizo.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="assets\24.jpeg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Tambito mágico</h5>
+          <p>Tambitos para bodas.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-
 
   <br>
   <h3 class="medio">¡Detalles que encantan!</h3>
@@ -91,18 +115,17 @@
   <br>
   <h3 class="medio">¡Recuerdos!</h3>
 
-<!--  <div class="row">-->
-<!--    <div class="col-md-3 my-5" th:each="producto : ${ultimosProductos}" th:object="${producto}">-->
-<!--      <a th:href="@{/productos/{id}(id=*{id})}" class="card shadow-lg" style=""text-decoration:none;>-->
-<!--        <img th:src="@{/assets/{filename}(filename={rutaPortada})}" th:alt="{titulo}" class="card-img-top">-->
-<!--        <div class="card-body">-->
-<!--          <h2 class="card-title fs-6" th:text="*{titulo}"></h2>-->
-<!--          <p th:text="*{descripcion}"></p>-->
-<!--        </div>-->
-<!--      </a>-->
-<!--    </div>-->
-<!--  </div>-->
+  <div class="row">
+    <div class="col-md-3 my-5" th:each="producto : ${ultimosProductos}" th:object="${producto}">
+      <a th:href="@{/productos/{id}(id=*{id})}" class="card shadow-lg" style=""text-decoration:none;>
+        <img th:src="@{/assets/{filename}(filename=*{rutaPortada})}" th:alt="*{titulo}" class="card-img-top">
+        <div class="card-body">
+          <h2 class="card-title fs-6" th:text="*{titulo}"></h2>
+          <p th:text="*{descripcion}"></p>
+        </div>
+      </a>
+    </div>
+  </div>
 </div>
-
 </body>
 </html>
