--- a/proyecto-lovit/src/main/resources/templates/admin/nuevo-producto.html
+++ b/proyecto-lovit/src/main/resources/templates/admin/nuevo-producto.html
@@ -77,13 +77,13 @@
                  th:errors="*{descripcion}"></div>
         </div>
 
-<!--        <div class="mb-3">-->
-<!--            <label for="imagen_portada" class="form-label">Portada : </label> <input-->
-<!--                type="file" name="imagen_portada" id="imagen_portada" class="form-control"-->
-<!--                th:field="*{imagen_portada}">-->
-<!--            <div class="invalid-feedback"-->
-<!--                 th:if="${#fields.hasErrors('imagen_portada')}" th:errors="*{imagen_portada}"></div>-->
-<!--        </div>-->
+        <div class="mb-3">
+            <label for="portada" class="form-label">Portada : </label> <input
+                type="file" name="portada" id="portada" class="form-control"
+                th:field="*{portada}">
+            <div class="invalid-feedback"
+                 th:if="${#fields.hasErrors('portada')}" th:errors="*{portada}"></div>
+        </div>
 
 <!--        <div class="mb-3">-->
 <!--            <label for="imagenes_adicionales" class="form-label">Imagen adicional : </label> <input-->
@@ -102,11 +102,11 @@
         </div>
 
         <div class="mb-3">
-            <label for="minimo_compra" class="form-label">Minimo de compra : </label> <input
-                type="number" id="minimo_compra" placeholder="Digite las piezas minimas de compra"
-                class="form-control" th:field="*{minimo_compra}">
-            <div class="invalid-feedback" th:if="${#fields.hasErrors('minimo_compra')}"
-                 th:errors="*{minimo_compra}"></div>
+            <label for="minimoCompra" class="form-label">Minimo de compra : </label> <input
+                type="number" id="minimoCompra" placeholder="Digite las piezas minimas de compra"
+                class="form-control" th:field="*{minimoCompra}">
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('minimoCompra')}"
+                 th:errors="*{minimoCompra}"></div>
         </div>
 
         <div class="mb-3">
@@ -134,11 +134,17 @@
         </div>
 
         <div class="mb-3">
-            <label for="tags" class="form-label">Tags : </label> <input
-                type="number" id="tags" placeholder="Digite el tags"
-                class="form-control" th:field="*{tags}">
-            <div class="invalid-feedback" th:if="${#fields.hasErrors('tags')}"
-                 th:errors="*{tags}"></div>
+            <label for="tags" class="form-label">Tipo : </label> <select
+                id="tags" class="form-control" th:field="*{tags}" multiple>
+            <option th:each="tag : ${tags}" th:value="${tag.id}"
+                    th:text="${tag.nombre}"></option>
+        </select>
+            <div class="invalid-feedback"
+                 th:if="${#fields.hasErrors('tags')}" th:errors="*{tags}"></div>
+        </div>
+
+        <div class="text-end">
+            <button type="submit" class="btn btn-primary">Guardar</button>
         </div>
 
         <div class="text-end">
