--- a/lovit-proyecto-master/lovit-proyecto-version1/proyecto-lovit/src/main/resources/templates/index.html
+++ b/lovit-proyecto-master/lovit-proyecto-version1/proyecto-lovit/src/main/resources/templates/index.html
@@ -111,6 +111,28 @@
     <a href="productos/tags/baby">
       <img src="assets/babyshower.png" class="imgbtn">
     </a>
+
+    <a href="productos/tags/xv">
+      <img src="assets/xvaños.png" class="imgbtn">
+    </a>
+  </div>
+
+  <div class="botones">
+    <a href="productos/tags/bautizo">
+      <img src="assets/bautizo.png" class="imgbtn">
+    </a>
+
+    <a href="productos/tags/bridal">
+      <img src="assets/bridalshower.png" class="imgbtn">
+    </a>
+
+    <a href="productos/tags/luctuoso">
+      <img src="assets/luctuoso.png" class="imgbtn">
+    </a>
+
+    <a href="productos/tags/boda">
+      <img src="assets/boda.png" class="imgbtn">
+    </a>
   </div>
   <br>
   <hr/>
