--- a/lovit-proyecto-master/lovit-proyecto-version1/proyecto-lovit/src/main/resources/templates/productos.html
+++ b/lovit-proyecto-master/lovit-proyecto-version1/proyecto-lovit/src/main/resources/templates/productos.html
@@ -24,7 +24,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <img src="assets\logoNegro.png" alt="logo" class="logo">
     <div class="search__container">
-        <form action="" method="POST" th:object="${busqueda}">
+        <form action="/productos" method="POST" th:object="${busqueda}">
             <input class="search__input" id="busqueda" name="busqueda" type="text" placeholder="Buscar..."/>
             <input type="submit" hidden/>
         </form>
