bugs de filtros corregidos

--- a/lovit-proyecto-master/lovit-proyecto-version1/proyecto-lovit/src/main/resources/templates/aZ.html
+++ b/lovit-proyecto-master/lovit-proyecto-version1/proyecto-lovit/src/main/resources/templates/aZ.html
@@ -82,7 +82,7 @@
             <ul class="dropdown-menu dropdown-menu-end">
                 <li><button class="dropdown-item" type="button"><a href="/aZ">Alfabéticamente: A-Z</a></button></li>
                 <li><button class="dropdown-item" type="button"><a href="/zA">Alfabéticamente: Z-A</a></button></li>
-                <li><button class="dropdown-item" type="button"><a href="/productos">Precio: mayor a menor</a></button></li>
+                <li><button class="dropdown-item" type="button"><a href="/mayorMenor">Precio: mayor a menor</a></button></li>
                 <li><button class="dropdown-item" type="button"><a href="/menorMayor">Precio: menor a mayor</a></button></li>
             </ul>
         </div>
